force-app/main/default/objects/CalloutSetting__mdt/CalloutSetting__mdt.object-meta.xml
<CustomObject>
    <description>Manage settings for every flow interface. 
Settings are set for one environment (= sandbox name) and one flow (= CMA-CGM API)</description>
    <label>Callout Setting</label>
    <pluralLabel>Callouts  Settings</pluralLabel>
</CustomObject>