force-app/main/default/objects/CalloutSetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if settings are available to use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>