force-app/main/default/objects/CalloutSetting__mdt/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <description>API Key for KeyId Header value</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>