force-app/main/default/objects/CalloutSetting__mdt/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>CMA-CGM API name  to set settings</description>
    <label>API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WIMB</fullName>
            </value>
            <value>
                <fullName>shipping.shipment.v1</fullName>
            </value>
            <value>
                <fullName>referential.location.v2</fullName>
            </value>
            <value>
                <fullName>vesseloperation.voyage.v1</fullName>
            </value>
            <value>
                <fullName>auth.pingfederate.v1</fullName>
            </value>
            <value>
                <fullName>shipping.shipment.v2</fullName>
            </value>
            <value>
                <fullName>logistic.tracking.wimb</fullName>
            </value>
            <value>
                <fullName>shipping.shipment.v2.addresses</fullName>
            </value>
            <value>
                <fullName>invoicing.advanced.v1</fullName>
            </value>
            <value>
                <fullName>vesseloperation.voyage.localreferences.v1</fullName>
            </value>
            <value>
                <fullName>shipping.shipment.notification.advance.v1</fullName>
            </value>
            <value>
                <fullName>shipping.shipment.shipmentrequest.v1</fullName>
            </value>
            <value>
                <fullName>shipping.shippingdocument.v1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>