force-app/main/default/objects/CalloutSetting__mdt/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <description>Authentication Method to access API :
- Access Token = send current access token in header
- API Key = send API Key Value in KeyId header attribute</description>
    <label>Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Token</fullName>
                <default>true</default>
                <label>Access Token</label>
            </value>
            <value>
                <fullName>API Key</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>