force-app/main/default/objects/CalloutSetting__mdt/fields/BasePath__c.field-meta.xml
<CustomField>
    <fullName>BasePath__c</fullName>
    <description>Base path endpoint for API</description>
    <label>Base Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>