force-app/main/default/objects/CalloutSetting__mdt/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for enabling debug logs, on Web services &amp; Apex, in order to log successful responses from WS</description>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>