force-app/main/default/objects/CalloutSetting__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Applicable environment for this settings</description>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
                <default>true</default>
                <label>Dev</label>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>TRN</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>PRD</fullName>
            </value>
            <value>
                <fullName>c3sPRT</fullName>
            </value>
            <value>
                <fullName>novCIN</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>VAL</fullName>
            </value>
            <value>
                <fullName>tdrSAT</fullName>
            </value>
            <value>
                <fullName>svcSAT</fullName>
            </value>
            <value>
                <fullName>novTDA</fullName>
            </value>
            <value>
                <fullName>novTPM</fullName>
            </value>
            <value>
                <fullName>novHFX</fullName>
            </value>
            <value>
                <fullName>iprTRN</fullName>
            </value>
            <value>
                <fullName>iprSIT</fullName>
            </value>
            <value>
                <fullName>iprSAT</fullName>
            </value>
            <value>
                <fullName>iprPRT</fullName>
            </value>
            <value>
                <fullName>iprDEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>