force-app/main/default/objects/CalloutSetting__mdt/fields/Mock__c.field-meta.xml
<CustomField>
    <fullName>Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mock the flow</description>
    <label>Mock</label>
    <type>Checkbox</type>
</CustomField>