force-app/main/default/objects/CalloutSetting__mdt/fields/MockResponse__c.field-meta.xml
<CustomField>
    <fullName>MockResponse__c</fullName>
    <description>String response to return if Mock is enable</description>
    <label>Mock Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>