force-app/main/default/objects/CalloutSetting__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Method called to the API : URL context added to the base path</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>