force-app/main/default/objects/CalloutSetting__mdt/listViews/AllFlows.listView-meta.xml
<ListView>
    <fullName>AllFlows</fullName>
    <columns>MasterLabel</columns>
    <columns>Mock__c</columns>
    <columns>Active__c</columns>
    <columns>BasePath__c</columns>
    <columns>Environment__c</columns>
    <columns>APIName__c</columns>
    <columns>Operation__c</columns>
    <columns>DeveloperName</columns>
    <columns>Debug__c</columns>
    <columns>MockResponse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Flows</label>
    <language>en_US</language>
</ListView>