force-app/main/default/objects/CalloutSetting__mdt/listViews/invoicing_advanced_v1.listView-meta.xml
<ListView>
    <fullName>invoicing_advanced_v1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APIName__c</field>
        <operation>equals</operation>
        <value>invoicing.advanced.v1</value>
    </filters>
    <label>invoicing.advanced.v1</label>
    <language>en_US</language>
</ListView>