force-app/main/default/objects/CalloutSetting__mdt/listViews/referentialLocationV2.listView-meta.xml
<ListView>
    <fullName>referentialLocationV2</fullName>
    <columns>MasterLabel</columns>
    <columns>Mock__c</columns>
    <columns>Active__c</columns>
    <columns>BasePath__c</columns>
    <columns>Environment__c</columns>
    <columns>APIName__c</columns>
    <columns>DeveloperName</columns>
    <columns>Debug__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APIName__c</field>
        <operation>equals</operation>
        <value>referential.location.v2</value>
    </filters>
    <label>referential.location.v2</label>
    <language>en_US</language>
</ListView>